gstools added to topology

--- a/topology.yml
+++ b/topology.yml
@@ -11,10 +11,15 @@ dependencies:
   - pygpu
   - pip
   - scikit-image
+  - scikit-learn
   - seaborn
   - conda-forge:nodejs
+  - bokeh
+  - m2w64-toolchain
   - pip:
       - mplstereonet
       - ipyvolume
       - pyvista
+      - nptyping
       - theano>=1.0.4
+      - gstools
